All functionality implemented

--- a/src/resources/manager_en_US.properties
+++ b/src/resources/manager_en_US.properties
@@ -33,6 +33,8 @@ managerCabinet.headerCabinet=Manager cabinet
 managerCabinet.createInvoices=Create invoices
 managerCabinet.addPayments=Add payments
 managerCabinet.finishShipping=Finish shippings
+managerCabinet.showDayReport=Show Report by Dates
+managerCabinet.showDirectionReport=Show Report by Directions
 finishShippings.title=Finish shippings
 finishShippings.header=Finish shippings
 finishShippings.Date=Date
@@ -48,3 +50,11 @@ finishShippings.prevPage=Prev
 finishShippings.nextPage=Next
 common.goCabinet=Go cabinet
 common.linkLogout=Logout
+reportDay.title=Report: Turnover by days
+reportDay.header=Report: Turnover by days
+reportDay.Date=Date
+reportDay.Turnover=Turnover (UAH)
+reportDirection.title=Report: Turnover by delivery directions
+reportDirection.header=Report: Turnover by delivery directions
+reportDirection.Direction=Direction
+reportDirection.Turnover=Turnover
